task-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upgloadme-service-lb
  labels:
    app: frontend
spec:
  type: LoadBalancer # This is for external communication
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
